--- a/UniFiler10/Styles/Styles.xaml
+++ b/UniFiler10/Styles/Styles.xaml
@@ -7,7 +7,7 @@
 
     <Thickness x:Key="PanelMargin">0, 0, 0, 0</Thickness>
     <Thickness x:Key="PanelMargin2">0, 4, 0, 4</Thickness>
-    <Thickness x:Key="PanelPadding">2, 2, 2, 2</Thickness>
+    <Thickness x:Key="PanelPadding">8, 2, 8, 2</Thickness>
 
     <GridLength x:Key="GridSize4Placeholder_Small">10</GridLength>
     <GridLength x:Key="GridSize4Placeholder_Medium">20</GridLength>
@@ -30,6 +30,7 @@
     <x:Double x:Key="ButtonBarItemSizeMedium">64</x:Double>
     <x:Double x:Key="LandscapeLargeItemWidth">300</x:Double>
     <x:Double x:Key="LandscapeItemWidth">200</x:Double>
+	<x:Double x:Key="LandscapeItemWidthMinusPanelPadding">184</x:Double>
 	<x:Double x:Key="LandscapeThreeQuartersItemWidth">150</x:Double>
     <x:Double x:Key="LandscapeItemHeight">80</x:Double>
     <GridLength x:Key="LandscapeLargeItemWidth_ForGrid">300</GridLength>
