--- a/UniFiler10/Views/SettingsView.xaml
+++ b/UniFiler10/Views/SettingsView.xaml
@@ -1,43 +1,47 @@
-﻿<UserControl
+﻿<ctl:BackableOpenableObservableControl
     x:Class="UniFiler10.Views.SettingsView"
     x:Name="me"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:UniFiler10.Views"
+	xmlns:ctl="using:UniFiler10.Controlz"
+	xmlns:utilz="using:Utilz"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:utilz="using:Utilz"
-    mc:Ignorable="d"
-    DataContextChanged="OnDataContextChanged">
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"    
+    mc:Ignorable="d">
+	<!--DataContextChanged="OnDataContextChanged">-->
 
     <!--Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"-->
 
-    <!--<Grid x:Name="LayoutRoot">
-        <local:MetaBriefcaseView
+	<Grid x:Name="LayoutRoot" Background="AntiqueWhite">
+		<Grid.RowDefinitions>
+			<RowDefinition Height="Auto"/>
+			<RowDefinition />
+		</Grid.RowDefinitions>
+
+		<Button 
+            Tapped="OnBackButton_Tapped"
+            Width="{StaticResource LandscapeLargeItemWidth}"
+			HorizontalAlignment="Left"
+            Style="{StaticResource ButtonLolloStyle}">
+			<Grid>
+				<Grid.ColumnDefinitions>
+					<ColumnDefinition Width="{StaticResource LandscapeItemHeight_ForGrid}"/>
+					<ColumnDefinition Width="{StaticResource GridSize4Placeholder_Medium}"/>
+					<ColumnDefinition/>
+				</Grid.ColumnDefinitions>
+
+				<SymbolIcon Symbol="Back"/>
+				<TextBlock Grid.Column="2" x:Uid="Back"
+					MaxWidth="{StaticResource LandscapeItemWidth}"
+					TextWrapping="Wrap" 
+					HorizontalAlignment="Left"/>
+			</Grid>
+		</Button>
+
+		<local:MetaBriefcaseView Grid.Row="1"
             DataContext="{Binding}"
-            VM="{Binding ElementName=me, Path=VM}"/>
-    </Grid>-->
-
-    <!--<SplitView x:Name="LayoutRoot"
-        DataContext="{Binding}"
-        IsPaneOpen="False"
-        DisplayMode="CompactInline"
-        CompactPaneLength="{StaticResource CompactPaneLength}"
-        IsDoubleTapEnabled="False" 
-        IsHoldingEnabled="False"
-        IsRightTapEnabled="False">
-
-        <SplitView.Content>
-            <StackPanel Orientation="Vertical">-->
-                <local:MetaBriefcaseView
-                    DataContext="{Binding}"
-                    VM="{Binding ElementName=me, Path=VM}"/>
-            <!--</StackPanel>
-        </SplitView.Content>
-
-        <SplitView.Pane>
-            <StackPanel>
-            </StackPanel>
-        </SplitView.Pane>
-    </SplitView>-->
-</UserControl>
+            VM="{x:Bind VM, Mode=OneWay}"/>
+		
+	</Grid>
+</ctl:BackableOpenableObservableControl>
