--- a/UniFiler10/Views/MetaBriefcaseView.xaml
+++ b/UniFiler10/Views/MetaBriefcaseView.xaml
@@ -10,8 +10,7 @@
     xmlns:ctl="using:UniFiler10.Controlz"
     mc:Ignorable="d"
     d:DesignHeight="300"
-    d:DesignWidth="400"
-    IsEnabled="{Binding IsEnabled, Mode=OneWay}">
+    d:DesignWidth="400">
 
     <Grid Background="AntiqueWhite">
         <Grid.ColumnDefinitions>
