--- a/UniFiler10/Views/BinderCoverView.xaml
+++ b/UniFiler10/Views/BinderCoverView.xaml
@@ -13,8 +13,7 @@
     d:DesignHeight="800"
     d:DesignWidth="400"
     d:DataContext="{d:DesignInstance Type=vms:BinderCoverVM, IsDesignTimeCreatable=False}"
-	DataContextChanged="OnDataContextChanged"
-    IsEnabled="{Binding IsEnabled}">
+	DataContextChanged="OnDataContextChanged">
 
 	<ctl:OpenableObservableControl.Resources>
 		<Storyboard x:Name="UpdatingStoryboard" RepeatBehavior="Forever" >
@@ -89,6 +88,16 @@
 				<local:DocumentView Canvas.ZIndex="100"
         			IsDeleteEnabled="False"
         			DataContext="{Binding Document, Mode=OneWay}"/>
+
+				<AppBarButton Icon="Delete"
+                    Tapped="OnDeleteFolder_Tapped"
+                    Canvas.ZIndex="200"
+                    Style="{StaticResource AppBarButtonRecoloured}"
+                    IsCompact="True"
+                    Foreground="{StaticResource FlashyForeground}"
+                    Opacity="1"
+                    HorizontalAlignment="Right" VerticalAlignment="Top"/>
+
 			</Grid>
 		</DataTemplate>
 	</ctl:OpenableObservableControl.Resources>
